--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "yarn": ">=0.27.5"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-preset-jolt": "^2.4.0",
     "eslint": "^4.4.1",
     "eslint-config-jolt": "^2.4.0",
