Move the jest config to the package.json

--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
       "yarn lint"
     ]
   },
+  "jest": {
+    "preset": "jest-preset-jolt",
+    "testEnvironment": "node"
+  },
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
