--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,8 @@ dependencies:
 
 test:
   pre:
-    - yarn lint
+    - yarn lint:cached
   override:
-    - yarn test
+    - yarn test:coverage
+  post:
+    - yarn coveralls
