--- a/package.json
+++ b/package.json
@@ -19,18 +19,17 @@
     "lint-staged": "^4.0.3",
     "rimraf": "^2.6.1"
   },
-  "workspaces": [
-    "packages/*"
-  ],
+  "jest": {
+    "preset": "jest-preset-jolt"
+  },
   "lint-staged": {
     "*.js": [
       "yarn lint"
     ]
   },
-  "jest": {
-    "preset": "jest-preset-jolt",
-    "testEnvironment": "node"
-  },
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build",
