--- a/packages/handy-url/package.json
+++ b/packages/handy-url/package.json
@@ -25,7 +25,7 @@
     "valid-url": "1.0.9"
   },
   "scripts": {
-    "build": "babel src --out-dir build --ignore '**/*.spec.js'",
+    "build": "babel src --out-dir build --ignore \"**/__tests__/**\"",
     "clean": "rimraf build",
     "prepublishOnly": "yarn run clean && yarn run build"
   }
