--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "coveralls": "^2.13.1",
     "eslint": "^4.4.1",
     "eslint-config-jolt": "^2.7.0",
+    "eslint-plugin-jest": "^21.0.2",
     "husky": "^0.14.3",
     "jest": "^20.0.4",
     "jest-preset-jolt": "^2.7.2",
