--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-jest": "^21.0.2",
     "husky": "^0.14.3",
     "jest": "^20.0.4",
+    "jest-plugins": "^2.2.4",
     "jest-preset-jolt": "^2.7.2",
     "lerna": "^2.0.0",
     "lint-staged": "^4.0.3",
