--- a/packages/handy-api/package.json
+++ b/packages/handy-api/package.json
@@ -18,6 +18,7 @@
     "build"
   ],
   "dependencies": {
+    "handy-url": "^1.3.3",
     "invariant": "^2.2.2",
     "isomorphic-fetch": "^2.2.1",
     "jolt-lodash": "^2.7.7"
