--- a/packages/handy-js/package.json
+++ b/packages/handy-js/package.json
@@ -16,6 +16,7 @@
     "build"
   ],
   "dependencies": {
+    "handy-api": "^1.3.4",
     "handy-datetime": "^1.3.4",
     "handy-duration": "^1.3.4",
     "handy-filesize": "^1.3.4",
